[project]
name = "stokeslet-integration"
version = "1.0.0"
description = ""
authors = [
    {name = "Arthur V."}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "arguably (>=1.3.0,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "legacy-quadpy (>=0.16.10,<0.17.0)",
    "anytree (>=2.12.1,<3.0.0)",
    "alive-progress (>=3.2.0,<4.0.0)",
    "meshpy (>=2022.1.3,<2023.0.0)",
    "prettytable (>=3.15.1,<4.0.0)",
]

[tool.poetry]
packages = [{include = "stokeslet_integration", from = "src"}]

[tool.poetry.scripts]
stokeslet_integration = "stokeslet_integration.main:arguably.run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
